--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -212,7 +212,7 @@ crossorigin=""/>
     <form>
     <!--Nom-->  
       <div class="form-group row" style="background-color: yellow;">
-        <label for="inputname" class="col-2 col-form-label">
+        <label for="inputname" class="col-2 col-form-label align-items-end">
           <span lang="fr">Nom :</span>
           <span lang="en">Name :</span>
         </label>
