--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -211,31 +211,28 @@ crossorigin=""/>
   <div class="formulaire col-8 ">
     <form>
     <!--Nom-->  
-      <div class="form-group row" style="background-color: yellow;">
-        <label for="inputname" class="col-2 col-form-label align-items-end">
+      <div class="form-group row" >
+        <label for="inputname" class="col-2 col-form-label">
           <span lang="fr">Nom :</span>
           <span lang="en">Name :</span>
         </label>
           <input type="text" class="form-control col-4" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
-          <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
-
+          <input type="text" class="form-control col-4" id="inputname" lang="en" placeholder="Write your name here..">
         <label for="inputfirstname" class="col-2 col-form-label">
           <span lang="fr">Prénom :</span>
           <span lang="en">First name :</span>
         </label>
           <input type="text" class="form-control col-4" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
-          <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">  
+          <input type="text" class="form-control col-4" id="inputfirstname" lang="en" placeholder="Write your first name here..">  
       </div>
     <!--emails -->
-      <div class="form-group row">
-        <label for="inputmail" class="col-2 col-form-label">
+      <div class="form-group row" style="background-color: yellow;">
+        <label for="inputmail" class="col-4 col-form-label">
           <span lang="fr">Adresse mail :</span>
           <span lang="en">Email adress :</span>
         </label>
-        <div class="col-10">
-          <input type="email" class="form-control" id="inputmail" lang="fr" placeholder="adressemail@example.com">
-          <input type="email" class="form-control" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
-        </div>  
+          <input type="email" class="form-control col-8" id="inputmail" lang="fr" placeholder="adressemail@example.com">
+          <input type="email" class="form-control col-8" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
       </div>
     <!-- date de naissance-->
       <div class="form-group row">
