--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -227,23 +227,21 @@ crossorigin=""/>
       </div>
     <!--emails -->
       <div class="form-group row" style="background-color: yellow;">
-        <label for="inputmail" class="col-3 col-form-label">
+        <label for="inputmail" class="col-4 col-form-label">
           <span lang="fr">Adresse mail :</span>
           <span lang="en">Email adress :</span>
         </label>
-          <input type="email" class="form-control col-9" id="inputmail" lang="fr" placeholder="adressemail@example.com">
-          <input type="email" class="form-control col-9" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
+          <input type="email" class="form-control col-8" id="inputmail" lang="fr" placeholder="adressemail@example.com">
+          <input type="email" class="form-control col-8" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
       </div>
     <!-- date de naissance-->
       <div class="form-group row">
-        <label for="inputbirthday" class="col-3 col-form-label">
+        <label for="inputbirthday" class="col-4 col-form-label">
           <span lang="fr">Date de naissance :</span>
           <span lang="en">Birth date :</span>
         </label>
-        <div class="col-9">
-          <input type="date" class="form-control" id="inputbirthdate" lang="fr">
-          <input type="date" class="form-control" id="inputbirthdate" lang="en">
-        </div>  
+          <input type="date" class="form-control col-8" id="inputbirthdate" lang="fr">
+          <input type="date" class="form-control col-8" id="inputbirthdate" lang="en">
       </div>
     </form>
   </div>
