--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -248,7 +248,7 @@ crossorigin=""/>
 
   <div class="envoiRGPD col-4">
     <!-- bouton d'envoi du formulaire-->
-    <button class="btn btn-secondary text-center mt-3" type="submit" >
+    <button class="btn btn-secondary text-center" type="submit" >
       <span lang="fr">M'inscrire à la newsletter</span>
       <span lang="en">Suscribe to newsletter</span>
     </button>
