--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -226,7 +226,7 @@ crossorigin=""/>
           <input type="text" class="form-control col-4" id="inputfirstname" lang="en" placeholder="Write your first name here..">  
       </div>
     <!--emails -->
-      <div class="form-group row" style="background-color: yellow;">
+      <div class="form-group row">
         <label for="inputmail" class="col-4 col-form-label">
           <span lang="fr">Adresse mail :</span>
           <span lang="en">Email adress :</span>
@@ -248,7 +248,7 @@ crossorigin=""/>
 
   <div class="envoiRGPD col-4">
     <!-- bouton d'envoi du formulaire-->
-    <button class="btn btn-secondary text-center" type="submit" >
+    <button class="btn text-center" type="submit" >
       <span lang="fr">M'inscrire à la newsletter</span>
       <span lang="en">Suscribe to newsletter</span>
     </button>
@@ -259,7 +259,7 @@ crossorigin=""/>
         <span lang="en">Protection of personal data :</span>
       </b>
     </p>
-    <p>
+    <p class="texteRGPD">
       <span lang="fr">En application du Règlement UE 2016/679 du 27 avril 2016 relatif à la protection des données personnelles, vous disposez du droit de vous opposer à tout moment à la réception de nos newsletters en cliquant sur le lien hypertexte présent dans celles-ci.</span>
       <span lang="en">In application of EU Regulation 2016/679 of 27 April 2016 regarding the protection of personal data, you have the right to contest at any time the receipt of our newsletters by clicking on the hypertext link in them.</span>
     </p>
