--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -176,7 +176,7 @@ crossorigin=""/>
     <span lang="en">Good news ! ScenTree is launching a newsletter in march ! Here is what we prepared for you :</span>
   </p>
 
-  <div class="row card-deck text-center">
+  <div class="row card-deck text-center mb-4">
     <div class="card">
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
       <div class="card-body" >
