--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -207,7 +207,7 @@ crossorigin=""/>
   </div>
 
 <!--Gestion du formulaire-->
-<div class="row mt-5">
+<div class="row mt-5" style="background-color: blue;">
   <div class="formulaire col-8 ">
     <form>
     <!--Nom-->  
@@ -253,7 +253,7 @@ crossorigin=""/>
       <span lang="en">Suscribe to newsletter</span>
     </button>
     <!--RGPD-->
-    <p class="mt-2 mb-0">
+    <p class="mt-2 mb-0 titreRGPD">
       <b>
         <span lang="fr">Protection des données personnelles :</span>
         <span lang="en">Protection of personal data :</span>
