--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -169,7 +169,7 @@ crossorigin=""/>
 
 <hr>
 
-<div class="col-12 pagederoulante2 text-justify scrollbarblockgauche"> 
+<div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
   <p class="mt-3 mb-2">
     <span lang="fr">Bonne nouvelle ! ScenTree lance sa newsletter au mois de mars ! Voici ce que nous vous avons préparé : </span>
