--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -199,6 +199,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Florhydral®__Florhydral®.html"><span lang="en">Florhydral<sup>®</sup> (CAS N°: 125109-85-5)</span><span lang="fr">Florhydral<sup>®</sup> (CAS N°: 125109-85-5)</span></a>
               <br><a class="interpop"  href="../ingredients/Safraleine®__Safraleine®.html"><span lang="en">Safraleine<sup>®</sup> (CAS N°: 54440-17-4)</span><span lang="fr">Safraleine<sup>®</sup> (CAS N°: 54440-17-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Dupical__Dupical.html"><span lang="en">Dupical (CAS N°: 30168-23-1)</span><span lang="fr">Dupical (CAS N°: 30168-23-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Gamma-Octalactone__Octalactone-Gamma.html"><span lang="en">Gamma-Octalactone (CAS N°: 104-50-7)</span><span lang="fr">Octalactone-Gamma (CAS N°: 104-50-7)</span></a>
           </p>
           <p><span lang="fr"> Refonte et harmonisation des interfaces de certaines pages du ruban droit. </span><span lang="en">Revamping and harmonization of some page interfaces from right ribbon buttons.</span></p>
         </div>
