--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -190,7 +190,7 @@ crossorigin=""/>
       <img class="card-img-top" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
       <div class="card-body">
         <p class="card-text ">
-          <span lang="fr">Je suis informé des arrivés, des nouveautés et des actualités de nos sponsors</span>
+          <span lang="fr">Je suis informé des arrivées, des nouveautés et des actualités de nos sponsors</span>
           <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
         </p>
       </div>
@@ -250,7 +250,7 @@ crossorigin=""/>
     <!-- bouton d'envoi du formulaire-->
     <button class="btn text-center btnenvoi" type="submit" value="Subscribe">
       <span lang="fr">M'inscrire à la newsletter</span>
-      <span lang="en">Suscribe to newsletter</span>
+      <span lang="en">Subscribe to newsletter</span>
     </button>
     <!--RGPD-->
     <p class="mt-2 mb-0 titreRGPD">
