--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -202,6 +202,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Gamma-Octalactone__Octalactone-Gamma.html"><span lang="en">Gamma-Octalactone (CAS N°: 104-50-7)</span><span lang="fr">Octalactone-Gamma (CAS N°: 104-50-7)</span></a>
           </p>
           <p><span lang="fr"> Refonte et harmonisation des interfaces de certaines pages du ruban droit. </span><span lang="en">Revamping and harmonization of some page interfaces from right ribbon buttons.</span></p>
+          <p><span lang="fr"> Début de la campagne d'inscription à notre prochaine <a ../_/Newsletter.html>newletter</a> </span><span lang="en">Beginning of the registration campaign for our <a ../_/Newsletter.html>newletter</a></span></p>
         </div>
       </li>
       <li>
