--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -108,7 +108,7 @@ crossorigin=""/>
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mt-5 mb-1">
-        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Newsletter.html">
+        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
         <span class="col-12  m-0 p-0">
