--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -173,8 +173,10 @@ crossorigin=""/>
 <!--<div id="map" class="h-100-with-padding-60px-before-md"></div>-->
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
-<div class="col-12 text-center gros_titre">
+<div class="col-12 text-center">
   <h1 class="gros_titre text-in-color-brown">COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</h1>
+  <br>
+  <h2>Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</h2>
 </div>
 
 <hr>
