--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -9,10 +9,11 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Comment sont crées les parfums ?</title>
-<title lang="en">ScenTree - How perfumes are created ?</title>
+<title lang="fr">ScenTree - Perfume process - Process Parfum </title>
+<title lang="en">ScenTree - Perfume process - Process Parfum </title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" lang="fr" content="Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication." />
+<meta name="description" lang="en" content="Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -92,21 +93,6 @@ crossorigin=""/>
   </div>
 </div>
 
-<!--Désactivation de la recherche 
-<div class="row align-items-start">
-  <div class="col-12 align-items-center m-0">
-    <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp</span></div>
-  </div>
-  Recherche 
-  <div class="col-12 text-center align-items-start">
-  <form class="" action="" autocomplete="off" id="searchForm">
-    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
-    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
-  </form>
-  </div>
-</div>
--->
-
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
@@ -176,7 +162,7 @@ crossorigin=""/>
 <div class="col-12 text-center">
   <h1 class="gros_titre text-in-color-brown">COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</h1>
   <br>
-  <h2>Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</h2>
+  <h2 class="sous_titre">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</h2>
 </div>
 
 <hr>
