--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -161,7 +161,7 @@ crossorigin=""/>
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center">
   <h1 class="gros_titre text-in-color-brown">COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</h1>
-  <br>
+  <br style="max-height: 0px;">
   <h2 class="sous_titre">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</h2>
 </div>
 
