--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -170,9 +170,9 @@ crossorigin=""/>
 
   <p class="mt-3">
     <span lang ="fr">
-      Les matières premières détaillées dans <a href="www.scentree.co" target="_blank">ScenTree</a> constituent l’alphabet du parfumeur. Un alphabet est utilisé pour écrire des mots. Les mots sont utilisés pour raconter une histoire. Cette histoire est couramment appelée « parfum ». Le parfum résulte donc de l’expression de la société qui le commercialise et de celle du créateur – le parfumeur – utilisant cet alphabet, dans le but de raconter une histoire. Le parfumeur doit maîtriser son alphabet avant toute création.
+      Les matières premières détaillées dans <a href="www.scentree.co" target="_blank">ScenTree</a> constituent l’alphabet du parfumeur. Un alphabet est utilisé pour écrire des mots. Les mots sont utilisés pour raconter une histoire. Cette histoire est couramment appelée « parfum ». Le parfum résulte donc de l’expression de la société qui le commercialise et de celle du créateur – le parfumeur – utilisant cet alphabet, dans le but de raconter une histoire. Le parfumeur doit maîtriser son alphabet avant toute création. Un parfum est le résultat du travail d’une équipe. 
       <br>
-      Un parfum est le résultat du travail d’une équipe. De l’idée au produit fini, du client au consommateur, détaillons chronologiquement tous les aspects de la création d’un parfum.
+      De l’idée au produit fini, du client au consommateur, détaillons chronologiquement tous les aspects de la création d’un parfum.
     </span>
     <span lang="en">
       The raw materials detailed in <a href="www.scentree.co" target="_blank">ScenTree</a> make up the perfumer's alphabet. An alphabet is used to write words. Words are used to tell a story. This story is commonly called "perfume". The perfume is the result of the expression of the company that markets it and the expression of the creator - the perfumer - using this alphabet to tell a story. The perfumer must master his alphabet before any creation. A perfume is the result of the work of a team. 
