--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -184,7 +184,7 @@ crossorigin=""/>
   <p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>
 
 <ol>
-  <li><h2>Le consommateur au cœur des projets</h2></li>
+  <li><h2 class="sous_titre">Le consommateur au cœur des projets</h2></li>
   <br>
   <p>Tout commence par le besoin d’un consommateur. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les tendances, ou s’affirmer à travers une originalité olfactive. <b>Ce sont les envies du consommateur que les marques souhaitent cibler.</b></p>
 
