--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -181,11 +181,19 @@ crossorigin=""/>
   </p>
 
 
-  <p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>
+  <!--<p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>-->
 
 <ol>
-  <li><h2 class="sous_titre">Le consommateur au cœur des projets</h2>
-  <p>Tout commence par le besoin d’un consommateur. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les tendances, ou s’affirmer à travers une originalité olfactive. <b>Ce sont les envies du consommateur que les marques souhaitent cibler.</b></p></li>
+  <li>
+    <h2 class="sous_titre">
+      <span lang="fr">Le consommateur au cœur des projets</span>
+      <span lang="en">The customer as a target</span>
+    </h2>
+    <p>
+      <span lang="fr">Tout commence par le besoin d’un consommateur. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les tendances, ou s’affirmer à travers une originalité olfactive. <b>Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
+      <span lang="en">It all starts with the consumer’s need. The customer wants to buy a perfume that suits him, that he likes. He may want to respect trends, or assert himself through olfactory originality. <b>It is the consumer's desires that the brands wish to target.</b></span>
+    </p>
+  </li>
 
   <li><p>Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du type de parfum que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché : 
     <ul>
