--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -160,8 +160,14 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center">
-  <h1 class="gros_titre text-in-color-brown">COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</h1>
-  <h2 class="sous_titre">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</h2>
+  <h1 class="gros_titre text-in-color-brown"><
+    <span lang="fr"> COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</span>
+    <span lang="en"> HOW PERFUMES ARE MADE ?</span>
+  </h1>
+  <h2 class="sous_titre">
+    <span lang="fr">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</span>
+    <span lang="en">Discover how our everyday perfumes are made, from the marketing idea to the selling, passing by creation and production.</span>
+  </h2>
 </div>
 
 <hr>
