--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -160,7 +160,7 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center">
-  <h1 class="gros_titre text-in-color-brown"><
+  <h1 class="gros_titre text-in-color-brown">
     <span lang="fr"> COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</span>
     <span lang="en"> HOW PERFUMES ARE MADE ?</span>
   </h1>
