--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -201,8 +201,16 @@ crossorigin=""/>
     </p>
   </li>
 
-  <li><p>Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du type de parfum que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché : 
-    <ul>
+  <li>
+    <h2 class="sous_titre">
+      <span lang="fr">Une idée, un type de parfum et un brief pour orienter la création</span>
+      <span lang="en">One idea, one type of perfume and one brief to guide creation</span>
+    </h2>
+    <p>
+      <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du type de parfum que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
+      <span lang="en">When a brand wants to release a new fragrance, there are several choices. It is therefore very important to take into account that there are several types of creation process, which are mainly depending on the type of perfume that the consumer is looking for. The following list details the 5 types of perfume existing on the market today:</b></span>
+
+      <ul>
       <li><u class="text-in-color-brown">Les parfums dits de "<b>grande distribution</b>"</u> : <br>Ce sont des parfums respectant la tendance, vendu mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</li>
       <li><u class="text-in-color-brown">Les parfums dits de "<b>mass market</b>"</u> : <br>Ce sont des parfums crées dans des volumes très importants, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </li>
       <li><u class="text-in-color-brown">Les parfums dits de "<b>niche</b>" ou "<b>parfums confidentiels</b>"</u> : <br>Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une volonté artistique particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement indépendantes, produissent peu de volume et se concentre sur le contenu du flacon, pas sur le contenant ou le marketing. C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </li>
