--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -213,19 +213,53 @@ crossorigin=""/>
       <ul>
         <li>
           <h3 class="listetypeparfum">
-            <span lang="fr">Les parfums dits de "grande distribution": </span>
-            <span lang="en">"Mass distribution" perfumes :</span>
+            <span lang="fr">Les parfums dits de "<b>grande distribution</b>": </span>
+            <span lang="en">"<b>Mass distribution</b>" perfumes :</span>
           </h3>
           <p>
             <span lang="fr">Ce sont des parfums respectant la tendance, vendu mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</span>
             <span lang="en">They are trendy perfumes, sold worldwide and in very large quantities. These fragrances can be found in the large specialized distribution chains that we all know. Supported by large advertising campaigns, these bottles are generally the most worn and it is the most common way of distribution. The competition is very tough and the stakes are very high.</span>
           </p>
         </li>
-        
-        <li><u class="text-in-color-brown">Les parfums dits de "<b>mass market</b>"</u> : <br>Ce sont des parfums crées dans des volumes très importants, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </li>
-        <li><u class="text-in-color-brown">Les parfums dits de "<b>niche</b>" ou "<b>parfums confidentiels</b>"</u> : <br>Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une volonté artistique particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement indépendantes, produissent peu de volume et se concentre sur le contenu du flacon, pas sur le contenant ou le marketing. C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </li>
-        <li><u class="text-in-color-brown">Les parfums dits "<b>exclusifs</b>"</u> : <br>Ces parfums sont généralement crées par les sociétés qui commercialise des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une gamme plus confidentielle, se rapprochant du modèle de niche afin de toucher une clientèle différentes. Leur positionnement sont généralement très haut de gamme. </li>
-        <li><u class="text-in-color-brown">Les parfums dits "<b>sur-mesure</b>"</u> : <br>Ces parfums sont généralement créés en un nombre extrèmement limité de produit. Ils sont créés pour une seule personne ou pour une société souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaire, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</li>
+        <li>
+          <h3 class="listetypeparfum">
+            <span lang="fr">Les parfums dits de "<b>mass market</b>": </span>
+            <span lang="en">"<b>Mass market</b>" perfumes :</span>
+          </h3>
+          <p>
+            <span lang="fr">Ce sont des parfums crées dans des volumes très importants, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
+            <span lang="en">These are perfumes created in very large quantities, with very poor, if any marketing, a classical bottle and generally sober packaging. These products are generally found on the shelves of our supermarkets. Their prices are generally low, but quality is there.</span>
+          </p>
+        </li>
+        <li>
+          <h3 class="listetypeparfum">
+            <span lang="fr">Les parfums dits de "<b>niche</b>" ou "<b>parfums confidentiels</b>": </span>
+            <span lang="en">"<b>Niche</b>" or "<b>confidential</b>" perfumes :</span>
+          </h3>
+          <p>
+            <span lang="fr">Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une volonté artistique particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement indépendantes, produissent peu de volume et se concentre sur le contenu du flacon, pas sur le contenant ou le marketing. C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </span>
+            <span lang="en">These fragrances are generally sold in smaller quantities, have very poor marketing support, but they often show a particular artistic will. The price of these bottles is generally higher than the previous categories because the brands positioning themselves in this way are generally independent, producing poor volumes and focus on the content of the perfume, and not on the packaging or marketing. It is generally in this category that the most original fragrances are found.</span>
+          </p>
+        </li>
+        <li>
+          <h3 class="listetypeparfum">
+            <span lang="fr">Les parfums dits "<b>exclusifs</b>" : </span>
+            <span lang="en">"<b>Exclusive</b>" perfumes : </span>
+          </h3>
+          <p>
+            <span lang="fr">Ces parfums sont généralement crées par les sociétés qui commercialise des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une gamme plus confidentielle, se rapprochant du modèle de niche afin de toucher une clientèle différentes. Leur positionnement sont généralement très haut de gamme. </span>
+            <span lang="en">These fragrances are generally created by companies that market fragrances in the first category listed. Alongside large productions, these companies generally create a more confidential product range, approaching the niche model in order to reach different clients. Their positioning is generally very high-end.</span>
+          </p>  
+        </li>
+        <li>
+          <h3 class="listetypeparfum">
+            <span lang="fr">Les parfums dits "<b>sur-mesure</b>" :</span>
+            <span lang="en">"<b>Customed</b>" perfumes : </span>
+          </h3>
+          <p>
+            <span lang="fr">Ces parfums sont généralement créés en un nombre extrèmement limité de produit. Ils sont créés pour une seule personne ou pour une société souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaire, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</span>
+            <span lang="en">These fragrances production is usually very limited. They are created for a single person or for a company wishing to create an olfactory identity for itself. Creation and prices can highly fluctuate, according to the number of copies produced, the demand, the bottle etc., and can reach very high amounts.</span>
+        </li>
       </ul>  
   <br><img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
   Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une étude de marché. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b>L’idée résulte de l’interaction entre une marque et un consommateur.</b>
