--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -280,7 +280,18 @@ crossorigin=""/>
       </p>
     </li>
 
-  <li><p>Prenons le cas d’un parfum sorti par une grande marque, dont le « brief » est soumis à plusieurs sociétés de création de parfum. Ces sociétés peuvent inclure plusieurs dizaines de parfumeurs. <b>Le cahier des charges est réceptionné par le service commercial de la société</b>, chargé d’entretenir une relation avec la marque, et d’en traiter la demande. Il est transmis au service d’évaluation de l’entreprise. Ce service, composé d’évaluateurs, est chargé de faire correspondre le travail du parfumeur, en ciblant la demande olfactive du client. </p></li>
+    <li>
+      <h2 class="sous_titre">
+        <span lang="fr">La réception du brief par la société de création</span>
+        <span lang="en">Reception of the brief by the creation company</span>
+      </h2>
+      <p>
+        <span lang="fr">Prenons le cas d’un parfum sorti par une grande marque, dont le « brief » est soumis à plusieurs sociétés de création de parfum. Ces sociétés peuvent inclure plusieurs dizaines de parfumeurs. Le cahier des charges est réceptionné par le service commercial de la société, chargé d’entretenir une relation avec la marque, et d’en traiter la demande. Il est transmis au service d’évaluation de l’entreprise. Ce service, composé d’évaluateurs, est chargé de faire correspondre le travail du parfumeur, en ciblant la demande olfactive du client.</span>
+        <span lang="en">Let's take the case of a perfume released by a major brand, whose "brief" is submitted to several perfume creation companies. These companies may include several dozen perfumers. The specifications are received by the company's sales department, in charge of maintaining a relationship with the brand and processing the application. It is forwarded to the company's evaluation department. This department, made up of evaluators, is in charge of matching the perfumer's work, targeting the client's olfactory demand.</span>
+      </p>
+    </li>
+    
+    <li><p>Prenons le cas d’un parfum sorti par une grande marque, dont le « brief » est soumis à plusieurs sociétés de création de parfum. Ces sociétés peuvent inclure plusieurs dizaines de parfumeurs. <b>Le cahier des charges est réceptionné par le service commercial de la société</b>, chargé d’entretenir une relation avec la marque, et d’en traiter la demande. Il est transmis au service d’évaluation de l’entreprise. Ce service, composé d’évaluateurs, est chargé de faire correspondre le travail du parfumeur, en ciblant la demande olfactive du client. </p></li>
 
   <p><img class="img4creationparfum" src="../img/parfeval.png" alt="Le lien parfumeur-évaluateur est indispensable" title="Le lien parfumeur-évaluateur est indispensable"></p>
   <li class="solvemobilepadding"><b>L’évaluateur a un rôle d’interprétation du « brief » et de conseil lors de la création du parfum</b>. Parfumeurs (ils peuvent être plusieurs à travailler en équipe ou en concurrence sur un même parfum, au sein d’une même société) et évaluateurs (un ou plusieurs là aussi) travaillent d’un commun accord autour d’un cahier des charges donné, et se lancent alors dans la création et l’évaluation du parfum demandé par le client.</p></li>
