--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -387,12 +387,20 @@ crossorigin=""/>
         </p>
     </li>
 </ol>
-  
-  <p class="blanccorrectionmisenepage"></p>
-  <p>
+
+<div>
     <span lang="fr">En somme, la création d’un parfum résulte de plusieurs étapes, et demande de nombreuses compétences, pour lesquelles le travail d’équipe est primordial. Tournant autour du consommateur, le parfum est au départ une idée, sublimée par la vision artistique d’un parfumeur, lui-même guidé par l’évaluateur, et aidé par l’assistant de parfumeur. La création d’un parfum est l’alliance d’une volonté marketing et artistique, tout en respectant les contraintes de stabilité, de réglementation, de coût et de temps imposées. L’art de la parfumerie réside donc dans la commercialisation d’une œuvre harmonieuse, contournant toute contrainte. Ainsi, le parfum est plus que jamais un produit de luxe, de raffinement et d’excellence.</span>
     <span lang="en">In short, the creation of a perfume is the result of several stages, and requires many skills, for which teamwork is essential. Revolving around the consumer, the perfume is initially an idea, sublimated by the artistic vision of a perfumer, himself guided by the evaluator, and helped by the perfumer assistant. The creation of a perfume is the alliance of a marketing and artistic will, while respecting the constraints of stability, regulation, cost and time imposed. The art of perfumery therefore lies in the marketing of a harmonious work, bypassing all constraints. Thus, more than ever, perfume is a product of luxury, refinement and excellence.</span>
-  </p>
+</div>
+
+<div>
+  <span lang="fr">Lire nos autres articles :</span>
+  <span lang="fr">Get to read our other articles :</span>
+    <ol>
+      <li></li>
+      <li></li>
+    </ol>
+</div>
 
 
 </div>
