--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -394,8 +394,10 @@ crossorigin=""/>
 </div>
 
 <div>
-  <span lang="fr">Lire nos autres articles :</span>
-  <span lang="fr">Get to read our other articles :</span>
+  <p>
+    <span lang="fr">Lire nos autres articles :</span>
+    <span lang="en">Get to read our other articles :</span>
+  </p>
     <ol>
       <li></li>
       <li></li>
