--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -193,7 +193,7 @@ crossorigin=""/>
   </p>
 
 
-  <!--<p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>-->
+  <p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>
 
 <ol>
   <li>
